# WiiU_TitleSwitcherPlugin

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  TRACKER.md  WUPS_API_REFERENCE.md  build.sh
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
examples/: TitleSwitcher_presets.json
scripts/: install-hooks.sh  package.sh  pre-commit  setup-sdusb.sh
snapshots/browse/: at_bottom.html  at_bottom.txt  default.html  default.txt  favorites.html  favorites.txt  games.html  games.txt  no_favorites.html  no_favorites.txt  scrolled.html  scrolled.txt  with_numbers.html  with_numbers.txt
snapshots/debug/: grid.html  grid.txt
snapshots/settings/: main.html  main.txt  main_brightness.html  main_brightness.txt  main_system_apps.html  main_system_apps.txt  system_apps.html  system_apps.txt  system_apps_browser.html  system_apps_browser.txt
src/: custom_menu.cpp  custom_menu.h  dc.h  main.cpp  settings.cpp  settings.h
src/common/: layout_constants.h  screen_constants.h
src/editor/: pixel_editor.cpp  pixel_editor.h
src/input/: buttons.h  text_input.cpp  text_input.h
src/menu/: categories.cpp  categories.h  menu.cpp  menu.h  menu_state.h
src/menu/panels/: browse_panel.cpp  browse_panel.h  debug_panel.cpp  debug_panel.h  edit_panel.cpp  edit_panel.h  miiverse_panel.cpp  miiverse_panel.h  settings_panel.cpp  settings_panel.h
src/network/: README.md  miiverse_api.cpp  miiverse_api.h  miiverse_test.cpp  miiverse_test.h
src/presets/: title_presets.cpp  title_presets.h
src/render/: bitmap_font.h  image_loader.cpp  image_loader.h  measurements.cpp  measurements.h  renderer.cpp  renderer.h  screen.cpp  screen.h
src/render/gx2/: README.md  SchriftGX2.cpp  SchriftGX2.h  gx2_overlay.cpp  gx2_overlay.h  schrift.c  schrift.h
src/render/gx2/shaders/: ColorShader.cpp  ColorShader.h  Texture2DShader.cpp  Texture2DShader.h
src/storage/: file_storage.cpp  file_storage.h  image_store.cpp  image_store.h  settings.cpp  settings.h
src/titles/: titles.cpp  titles.h
src/ui/: layout.cpp  layout.h  list_view.cpp  list_view.h
src/utils/: dc.h  paths.h
tests/: CMakeLists.txt  Dockerfile  Makefile  run_tests
tests/mocks/menu/: menu.h
tests/mocks/render/: renderer.h
tests/mocks/ui/: layout_mock.cpp
tests/mocks/wups/: storage.h
tests/unit/: buttons_test.cpp  list_view_test.cpp  settings_test.cpp
tools/: convert_gametdb.py
tools/preview/: .gitignore  CMakeLists.txt  Makefile  ascii_renderer.cpp  ascii_renderer.h  menu_render.cpp  menu_render.h  preview_demo.cpp
tools/preview/snapshots/: browse_at_bottom.txt  browse_default.txt  browse_favorites.txt  browse_games.txt  browse_no_favorites.txt  browse_scrolled.txt  browse_system.txt  browse_with_numbers.txt  debug_grid.txt  drc_default.txt  tv1080_default.txt  tv480_default.txt  tv720_default.txt
tools/preview/stubs/: buttons_stub.h  categories_stub.h  image_loader_stub.h  renderer_stub.h  settings_stub.h  text_input_stub.h  title_presets_stub.h  titles_stub.h  vpad_stub.h
tools/web_preview/: CMakeLists.txt  canvas_renderer.cpp  dev-server.js  dev.sh  main.cpp  mock_image_loader.cpp  mock_settings.cpp  mock_title_presets.cpp  mock_titles.cpp  package-lock.json  package.json  shell.html  web_input.cpp
tools/web_preview/stubs/: categories_stub.h  image_loader_stub.h  layout_stub.h  renderer_stub.h  settings_stub.h  titles_stub.h  vpad_stub.h
tools/web_preview/stubs/coreinit/: time.h
tools/web_preview/stubs/nn/ccr/: sys.h
tools/web_preview/stubs/notifications/: notifications.h
tools/web_preview/stubs/render/: renderer.h
tools/web_preview/stubs/sysapp/: launch.h  switch.h  title.h
tools/web_preview/stubs/vpad/: input.h
tools/wii_disc_converter/: .gitignore  DEVELOPMENT.md  README.md  convert.sh  inject.sh  rpx_inject.py
